--- a/foxie/templates/base.html
+++ b/foxie/templates/base.html
@@ -33,11 +33,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url "home" %}">Foxie</a>
+            <a class="navbar-brand" href="{% url "profile" %}">Foxie</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url "home" %}">Home</a></li>
+                <li class="active"><a href="{% url "profile" %}">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
