Got registration working Got password reset working

--- a/foxie/templates/main/profile.html
+++ b/foxie/templates/main/profile.html
@@ -15,7 +15,7 @@
                 <form>
                     {% csrf_token %}
                     <p>
-                    <textarea style="width: 100%; resize: none" rows="6" required id="id_text" max_length=140 name="text" type="textarea" placeholder="Share what you have to say..."></textarea>
+                    <textarea class="form-control" style="width: 100%; resize: none" rows="6" required id="id_text" max_length=140 name="text" type="textarea" placeholder="Share what you have to say..."></textarea>
                     </p>
                     
                     <p>
