--- a/foxie/templates/base.html
+++ b/foxie/templates/base.html
@@ -46,6 +46,7 @@
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, {{ user }}<b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                    <li><a href="{% url "account" %}">My Account</a></li>
                     <li><a href="{% url "logout" %}">Logout</a></li>
                 </ul>
                 </li>
