--- a/foxie/templates/main/signin.html
+++ b/foxie/templates/main/signin.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header_extra %}    
-<link href="{{ STATIC_URL }}/signin.css" rel="stylesheet">
+<link href="{{ STATIC_URL }}signin.css" rel="stylesheet">
 {% endblock header_extra %}
 
 {% block navbar %}
