--- a/foxie/templates/base.html
+++ b/foxie/templates/base.html
@@ -7,12 +7,10 @@
 <meta name="author" content="">
 <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
-<title>Foxie - {% block title %}Home{% endblock %}</title>
+<title>Foxie - {% block title %}Sign In{% endblock %}</title>
 
 <!-- Bootstrap core CSS -->
 <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
-
-<!-- Custom styles for this template -->
 <link href="{{ STATIC_URL }}css/jumbotron.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -25,57 +23,9 @@
 </head>
 <body>
 {% block navbar %}
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{% url "profile" %}">Foxie</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url "profile" %}">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            {% if user.is_authenticated %}
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, {{ user }}<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="{% url "account" %}">My Account</a></li>
-                    <li><a href="{% url "logout" %}">Logout</a></li>
-                </ul>
-                </li>
-            </div>
-            {% else %}
-            <form class="navbar-form navbar-right">
-                {% csrf_token %}  
-                {% for field in form %}
-                <div class="form-group">
-                    {{ field }}
-                </div>
-                {% endfor %}
-                <button type="submit" formmethod="post" formaction="{% url "login" %}" class="btn btn-success">Sign in</button>
-            </form>
-            {% endif %}  
-        </div><!--/.navbar-collapse -->
-    </div>
-</div>
+{% include "main/navbar_snippet.html" %}
 {% endblock navbar %}
 {% block body %}
-{% if form.errors %}
-<div class="alert alert-danger">
-    <ul>
-        {% for error in form.error_messages %}
-        <li>{{ error }}</li>
-        {% endfor %}
-    </ul>    
-</div> 
-{% endif %}
 {% endblock body %}
 <hr>
 
