--- a/foxie/templates/main/account.html
+++ b/foxie/templates/main/account.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
+{% block title %}{{ user }}'s Account{% endblock title %}
+
 {% block body %}
 <p>
 <div class="row row-fluid">
     <div class="container col-lg-4 col-lg-offset-2">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Share</h3>
+                <h3 class="panel-title">My Account</h3>
             </div>
             <div class="panel-body">
                 <form>
