--- a/foxie/templates/main/trending.html
+++ b/foxie/templates/main/trending.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_nav.html" %}
 
 {% block title %}{{ name }}{% endblock %}
 
 
 {% block body %}
+<p>
 <div class="row row-fluid">
     <div class="container col-lg-8 col-lg-offset-2">
         <div class="panel panel-default">
@@ -32,4 +33,5 @@
 
     </div>
 </div>
+</p>
 {% endblock body %}
