Fixed login/logout redirects Started working on profile page

--- a/foxie/templates/main/signin.html
+++ b/foxie/templates/main/signin.html
@@ -22,7 +22,7 @@
             {% endfor %}
         </div> 
         {% endif %}
-        <button type="submit" formmethod="post" formaction="{% url "login" %}" class="btn btn-lg btn-primary btn-block">Sign in</button>
+        <button type="submit" formmethod="post" formaction="{% url "my_login" %}" class="btn btn-lg btn-primary btn-block">Sign in</button>
       </form>
       <form class="form-signin">
       <h2 class="form-signin-heading">Or register an account</h2>
