--- a/foxie/templates/main/feeds_snippet.html
+++ b/foxie/templates/main/feeds_snippet.html
@@ -1,4 +1,3 @@
-{% load main_extras %}
 <p>
 <div class="row row-fluid">
     <div class="container col-lg-4 col-lg-offset-2">
@@ -61,48 +60,7 @@
                 <h3 class="panel-title">Your Feed</h3>
             </div>
             <div class="panel-body"> 
-                <ul class="list-group">
-                    {% for yip in yips %}
-                    <small>{{ yip.user.username }} at {{ yip.dt }}</small>
-                    <li class="list-group-item">
-                    <p style="word-wrap: break-word">
-                    {% for word in yip.get_words %}
-                    {% if word|first == '#' %}
-                    <a href="/trending/{{ word|slice:"1:" }}/">{{ word }}</a>
-                    {% elif word|is_video %}
-                    <a href="{{ word|full_url }}">{{ word }}</a>
-                    <div id="ytplayer_{{ word }}"></div>
-                    <script>
-                    var tag = document.createElement('script');
-                    tag.src = "https://www.youtube.com/player_api";
-                    var firstScriptTag = document.getElementsByTagName('script')[0];
-                    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-                    // Replace the 'ytplayer' element with an <iframe> and
-                    // YouTube player after the API code downloads.
-                    var player;
-                    function onYouTubePlayerAPIReady() {
-                        player = new YT.Player('ytplayer_{{ word }}', {
-                    height: '280',
-                    width: '100%',
-                    videoId: '{{ word|get_query_arg:"v" }}'
-                    });
-                    }
-                    </script>
-                    {% elif word|is_image %}
-                    <a href="{{ word|full_url }}">{{ word|full_url }}</a>
-                    <img style="width: 100%" src={{ word|full_url }}></img>
-                    {% elif word|valid_url %}
-                    <a href="{{ word|full_url }}">{{ word }}</a>
-                    {% else %}
-
-                    {{ word }}
-                    {% endif %}
-                    {% endfor %}
-                    </p>
-                    </li>
-                    {% endfor %}
-                </ul>
+                {% include "main/yip_feed.html" %}
             </div>
         </div>
     </div>
