--- a/foxie/templates/main/navbar_snippet.html
+++ b/foxie/templates/main/navbar_snippet.html
@@ -20,7 +20,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, {{ user }}<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="{% url "account" %}">My Account</a></li>
-                    <li><a href="{% url "logout" %}">Logout</a></li>
+                    <li><a href="{% url "my_logout" %}">Logout</a></li>
                 </ul>
                 </li>
             </div>
@@ -32,7 +32,7 @@
                     {{ field }}
                 </div>
                 {% endfor %}
-                <button type="submit" formmethod="post" formaction="{% url "login" %}" class="btn btn-success">Sign in</button>
+                <button type="submit" formmethod="post" formaction="{% url "my_login" %}" class="btn btn-success">Sign in</button>
             </form>
             {% endif %}  
         </div><!--/.navbar-collapse -->
