--- a/foxie/templates/main/profile.html
+++ b/foxie/templates/main/profile.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
-{% load main_extras %}
-{% block title %}{{ user }}'s Profile{% endblock %}
+{% extends "base_nav.html" %}
+{% block title %}{{ profile_user }}'s Profile{% endblock %}
 
 
 {% block body %}
@@ -8,107 +7,27 @@
 <div class="row row-fluid">
     <div class="container col-lg-4 col-lg-offset-2">
         <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Share</h3>
-            </div>
-            <div class="panel-body">
-                <form>
-                    {% csrf_token %}
-                    <p>
-                    <textarea class="form-control" style="width: 100%; resize: none" rows="6" required id="id_text" max_length=140 name="text" type="textarea" placeholder="Share what you have to say..."></textarea>
-                    </p>
-                    
-                    <p>
-                    <button type="submit" formaction="/yip/" class="btn btn-success" formmethod="post">{{ what_does_the_fox_say }}</button>
-                    </p>
-                </form>
+            <div class="list-group">
+                <a href="#" class="list-group-item active">
+                    <h4 class="list-group-item-heading">Feed</h4>
+                </a>
+                <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">Followers</h4>
+                </a>
+                <a href="#" class="list-group-item">
+                    <h4 class="list-group-item-heading">Following</h4>
+                </a>
             </div>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Follow Someone</h3>
-            </div>
-            <div class="panel-body">
-                <form>
-                    {% csrf_token %}
-                    <p>
-                    <input class="form-control" id="id_followee" name="followee" placeholder="Find Someone" required type="text">
-                    </p>
-                    <p>
-                    <button type="submit" formaction="/follow/" class="btn btn-success" formmethod="post">Follow</button>
-                    </p>
-                </form>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Trending</h3>
-            </div>
-            <div class="panel-body">
-                <form>
-                    <p>
-                    <div class="input-group"> 
-                        <span class="input-group-addon">#</span>
-                        <input id="id_search" name="search" required type="text" class="form-control" placeholder="Search...">
-                    </div>
-                    </p>
-                    <p>
-                    <button type="submit" class="btn btn-success" formaction="/trending/" formmethod="get">Go</button>
-                    </p>
-                </form>
-            </div>
-        </div>
-    
     </div>
     <div class="container col-lg-4">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Your Feed</h3>
+            <h3 class="panel-title">{{ profile_user }}'s Feed</h3>
         </div>
         <div class="panel-body"> 
-            <ul class="list-group">
-                 {% for yip in yips %}
-                 <small>{{ yip.user.username }} at {{ yip.dt }}</small>
-                 <li class="list-group-item">
-                 <p style="word-wrap: break-word">
-                 {% for word in yip.get_words %}
-                    {% if word|first == '#' %}
-                    <a href="/trending/{{ word|slice:"1:" }}/">{{ word }}</a>
-                    {% elif word|is_video %}
-                        <a href="{{ word|full_url }}">{{ word }}</a>
-                        <div id="ytplayer_{{ word }}"></div>
-                        <script>
-                        var tag = document.createElement('script');
-                        tag.src = "https://www.youtube.com/player_api";
-                        var firstScriptTag = document.getElementsByTagName('script')[0];
-                        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-                        // Replace the 'ytplayer' element with an <iframe> and
-                        // YouTube player after the API code downloads.
-                        var player;
-                        function onYouTubePlayerAPIReady() {
-                            player = new YT.Player('ytplayer_{{ word }}', {
-                                height: '280',
-                                width: '100%',
-                                videoId: '{{ word|get_query_arg:"v" }}'
-                                });
-                        }
-                        </script>
-                    {% elif word|is_image %}
-                        {{ word|full_url }}
-                        <img style="width: 100%" src={{ word|full_url }}></img>
-                    {% elif word|valid_url %}
-                    <a href="{{ word|full_url }}">{{ word }}</a>
-                    {% else %}
-
-                        {{ word }}
-                    {% endif %}
-                    {% endfor %}
-                    </p>
-                 </li>
-                 {% endfor %}
-             </ul>
-         </div>
+            {% include "main/yip_feed.html" %} 
+        </div>
      </div>
  </div>
 </div>
