--- a/foxie/templates/main/home.html
+++ b/foxie/templates/main/home.html
@@ -10,3 +10,55 @@
 {% include "main/signin.html" %}
 {% endif %}
 {% endblock body %}
+
+{% if user.is_authenticated %}
+{% block script %}
+<script>
+function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie != '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+
+
+
+var csrftoken = getCookie('csrftoken');
+function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+}
+$.ajaxSetup({
+crossDomain: false, // obviates need for sameOrigin test
+beforeSend: function(xhr, settings) {
+if (!csrfSafeMethod(settings.type)) {
+xhr.setRequestHeader("X-CSRFToken", csrftoken);
+}
+}
+});
+
+$(document).ready( function() {
+        $('#share').submit( function() {
+            $.ajax({
+                data: $(this).serialize(),
+                type: $(this).attr('method'),
+                url:  $(this).attr('action'),
+                success: function(response) {
+                    $('#yips').prepend(response);
+                }
+            });
+            return false;
+         });
+       });
+</script>
+{% endblock script %}
+{% endif %}
