--- a/foxie/templates/main/yip_feed.html
+++ b/foxie/templates/main/yip_feed.html
@@ -1,5 +1,5 @@
 {% load main_extras %}
-<ul class="list-group">
+<ul id="yips" class="list-group">
     {% for yip in yips %}
     <small>{{ yip.user.username }} at {{ yip.dt }}</small>
     <li class="list-group-item">
