--- a/foxie/templates/main/account.html
+++ b/foxie/templates/main/account.html
@@ -3,6 +3,7 @@
 {% block title %}{{ user }}'s Account{% endblock title %}
 
 {% block body %}
+{{ block.super }}
 <p>
 <div class="row row-fluid">
     <div class="container col-lg-4 col-lg-offset-2">
