--- a/foxie/templates/main/feeds_snippet.html
+++ b/foxie/templates/main/feeds_snippet.html
@@ -29,7 +29,7 @@
                     <input class="form-control" id="id_followee" name="followee" placeholder="Find Someone" required type="text">
                     </p>
                     <p>
-                    <button type="submit" class="btn btn-success">Follow</button>
+                    <button type="submit" formmethod="post" formaction="{% url "follow" %}" class="btn btn-success">Follow</button>
                     </p>
                 </form>
             </div>
@@ -56,12 +56,7 @@
     </div>
     <div class="container col-lg-4">
         <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Your Feed</h3>
-            </div>
-            <div class="panel-body"> 
-                {% include "main/yip_feed.html" %}
-            </div>
+                {% include "main/yips.html" %}
         </div>
     </div>
 </div>
