Got contact page working Only sends emails to stdout, for now

--- a/foxie/templates/main/about.html
+++ b/foxie/templates/main/about.html
@@ -1,2 +1,17 @@
 {% extends "base_nav.html" %}
 
+{% block title %}About{% endblock %}
+
+{% block body %}
+{{ block.super }}
+<div class="container">
+    <p>
+    <div class="jumbotron">
+    <h1>About</h1>
+    <p>
+    Foxie is named as an homage to Ylvis' song The Fox, since we are all left asking what sound the fox makes.
+    </p>
+</div>
+</p>
+</div>
+{% endblock body %}
