--- a/foxie/templates/base.html
+++ b/foxie/templates/base.html
@@ -12,7 +12,7 @@
 <!-- Bootstrap core CSS -->
 <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
 <link href="{{ STATIC_URL }}css/jumbotron.css" rel="stylesheet">
-
+<link href="{{ STATIC_URL }}css/style.css" rel="stylesheet">
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
       <script src="{{ STATIC_URL }}js/html5shiv.js"></script>
