--- a/foxie/templates/main/navbar_snippet.html
+++ b/foxie/templates/main/navbar_snippet.html
@@ -10,15 +10,16 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url "home" %}">Home</a></li>
-                <li><a href="{% url "about" %}">About</a></li>
-                <li><a href="{% url "contact" %}">Contact</a></li>
+                <li {% if tab_selected == "home" %}class="active"{% endif %}><a href="{% url "home" %}">Home</a></li>
+                <li {% if tab_selected == "about" %}class="active"{% endif %}><a href="{% url "about" %}">About</a></li>
+                <li {% if tab_selected == "contact" %}class="active"{% endif %}><a href="{% url "contact" %}">Contact</a></li>
             </ul>
             {% if user.is_authenticated %}
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, {{ user }}<b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                    <li><a href="{% url "profile" %}">Profile</a></li>
                     <li><a href="{% url "account" %}">My Account</a></li>
                     <li><a href="{% url "my_logout" %}">Logout</a></li>
                 </ul>
