--- a/foxie/templates/500.html
+++ b/foxie/templates/500.html
@@ -1,19 +1,15 @@
-{% extends "base.html" %}
+{% extends "base_nav.html" %}
 {% load i18n %}
 {% load url from future %}
 
 {% block title %}{% trans 'Server error (500)' %}{% endblock %}
 
-{% block modal %}
+{% block body %}
+{{ block.super }}
 <div class="modal-header">
 <h1>{% trans 'Server Error <em>(500)</em>' %}</h1>
 </div>
 <div class="modal-body">
 <p>{% trans "There's been an error. It's been reported to the site administrators via e-mail and should be fixed shortly. Thanks for your patience." %}</p>
 </div>
-        <div class="modal-footer">
-        <footer>
-            <p>&copy; ExpressCheckouts 2013</p>
-        </footer>
-        </div>
 {% endblock %}
