Videos are still sorta broken Working on fixing them

--- a/foxie/templates/main/feeds_snippet.html
+++ b/foxie/templates/main/feeds_snippet.html
@@ -55,7 +55,7 @@
 
     </div>
     <div class="container col-lg-4">
-        <div class="panel panel-default">
+        <div id="yips_feed" class="panel panel-default">
                 {% include "main/yips.html" %}
         </div>
     </div>
